<resources>
    <!-- title and description -->
    <string name="app_name">BasketBite</string>
    <string name="basket_bite">BasketBite</string>
    <string name="delievery_favorite_food">Deliever Favorite Food</string>
    <string name="design">Design By Daniel Rothmann</string>
    <string name="title_StartActivity">Enjoy Restaurant Quality Meals at Home</string>
    <string name="join_moto">Login To Your Account</string>

    <!--  contentDescription -->
    <string name="contentDescription_back">Back</string>
    <string name="contentDescription_next">Next</string>
    <string name="contentDescription_done">Done</string>
    <string name="contentDescription_plus">Plus one</string>
    <string name="contentDescription_minus">Minus one</string>
    <string name="contentDescription_delete">Delete</string>


    <!-- hint and question -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_email_or_number">Email or Phone Number</string>
    <string name="question_SingIn">Don’t Have Account?</string>
    <string name="question_SignUp">Already Have An Account?</string>

    <!-- Login/Password -->
    <string name="login">Login</string>
    <string name="password">Password</string>

    <!-- Sign In/Sign Up -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up Here</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="create_acc">Create Account</string>


    <!--Support /  Кнопка "Написать в поддержку"  -->
    <string name="supportTitle">Support</string>
    <string name="support">Contact Support</string>
    <string name="support_email">danilarothmann@gmail.com</string> <!-- support email -->
    <string name="support_email_subject">Message to BasketBite </string>
    <string name="support_email_body">Hello BasketBite, \n </string>
    <string name="no_email_app">No email app found on this device</string>
    <string name="choose_email_app">Choose email app</string>
    <string name="email_send_error">Failed to open email app</string>

    <!-- Location -->
    <string name="choose_location">Choose Your Location </string>
    <string name="notification_location">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience</string>
    <string name="choose_location_apply">Do you want to continue with this selected  location? </string>
    <string name="confirmation_location">Confirmation </string>
    <string name="apply">Apply</string>
    <string name="cancel">Cansel</string>

    <!-- Main Screen -->
    <string name="explore">Explore Your Favorite Food</string>

    <!-- Bottom Menu -->
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>

    <!--Fragment-->

    <!--Home Fragment-->
    <string name="popular">Popular</string>
    <string name="go_menu">View Menu</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="food_name">Food Name</string>
    <string name="short_description">Short description</string>
    <string name="ingredients">Ingredients</string>
    <string name="menu">Menu</string>
    <string name="price">Price</string>

    <!-- Search -->
    <string name="what_to_order">What do you want to order?</string>
    <string name="nothing_found">Nothing found for your search. Please repeat your request</string>

    <!-- Cart -->
    <string name="continue_cart">Continue</string>
    <string name="continue_with_price">Continue with price %1$s</string>
    <string name="design_price">$ 10,00</string>
    <string name="empty_cart">Your shopping cart is empty</string>
    <string name="item_added_to_cart">%s added to cart</string>

    <!-- Delivery -->
    <string name="delivery_time">Delivery time</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="delivery_address">Delivery address</string>
    <string name="order_information">Order Information</string>
    <string name="check_name">Сheck or change the name in the order</string>
    <string name="check_address">Сheck or change the address in the order</string>
    <string name="check_phone">Сheck or change the phone in the order</string>
    <string name="add_info_courier">Add information for the courier if necessary</string>
    <string name="submit_order">Submit Order</string>
    <string name="thank_you">Thank you for your order!</string>

    <!-- Profile -->
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Log Out</string>
    <string name="default_name">User</string>
    <string name="location_not_set">Location not set</string>
    <string name="address_not_set">The address is not specified</string>
    <string name="phone_not_set">Phone number is not specified</string>

    <!-- Edit Profile -->
    <string name="confirm_password_title">Confirm your password</string>
    <string name="enter_password">Enter your password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="confirm">Confirm</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="enter_name">Enter your name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="data_saved">Data saved</string>
    <string name="save_error">Error saving data</string>
    <string name="email_update_error">Error updating email</string>
    <string name="profile_load_error">Error loading profile</string>
    <string name="email_change_warning">Changing email requires password confirmation</string>
    <string name="password_too_short">Password is too short</string>
    <string name="email_already_used">This email is already in use</string>
    <string name="reauth_required">Reauthentication is required</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="email_updated_successfully">Email updated successfully</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="email_already_in_use">Email is already in use</string>
    <string name="reauthentication_required">Reauthentication is required</string>
    <string name="email_update_failed">Email update failed</string>
    <string name="check_name_profile">Сheck or change the name</string>
    <string name="check_address_profile">Сheck or change the address</string>
    <string name="check_phone_profile">Сheck or change the phone</string>
    <string name="check_email_profile">Сheck or change the email</string>
    <string name="check_location_profile">Сheck or change the location</string>

    <!-- Photo Avatar -->
    <string name="title_photo">Select a photo</string>
    <string name="make_foto">Photo</string>
    <string name="choose_from_gallery">Gallery</string>

    <!-- Order -->
    <string name="order_confirmed">Order Confirmed</string>
    <string name="pending_time">14:30</string>
    <string name="order_number">Order #12345</string>
    <string name="delivery_status">Pending</string>
    <string name="order_data_time">12 Nov 2024, 14:30</string>
    <string name="quantity_cart_item">3 items</string>
    <string name="track_order">Track Order</string>
    <string name="order_history">Order History</string>
    <string name="active_orders">Active Orders</string>
    <string name="history_orders">History</string>
    <string name="cancel_order">Cancel Order</string>

    <!-- Other -->
    <string name="next">Next</string>
    <string name="add_info">Add Information</string>




</resources>