<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_menu_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_24"/>

    <item
        android:id="@+id/shopping_cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_shopping_cart_24"/>

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_24"/>

    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/ic_format_list_bulleted_24"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person_24"/>


</menu>