<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_location"
            android:layout_margin="5dp"
            android:textSize="26sp"
            android:fontFamily="@font/yeonsung"
            android:textColor="@color/blue"
            android:gravity="center|center_vertical"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_location_apply"
            android:layout_margin="5dp"
            android:gravity="center|center_vertical"
            android:fontFamily="@font/yeonsung"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_positive_LA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/btn_signInSignUp.login"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/apply"
                android:textSize="16sp"
                android:fontFamily="@font/yeonsung"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_negative_LA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/btn_signInSignUp.login"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:fontFamily="@font/yeonsung"
                />

        </LinearLayout>

        </LinearLayout>

</androidx.cardview.widget.CardView>