<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Title -->
        <TextView
            android:id="@+id/title_edit_profile"
            style="@style/tv_title_SplashActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_profile_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/check_address_profile"
            app:endIconMode="clear_text"
            app:endIconTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_edit_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yeonsung"
                android:inputType="textPersonName"
                android:text="@string/name"
                android:maxLines="1"
                android:textColor="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/check_email_profile"
            app:endIconMode="clear_text"
            app:endIconTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yeonsung"
                android:inputType="textEmailAddress"
                android:text="@string/email"
                android:maxLines="1"
                android:textColor="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Address -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/check_address_profile"
            app:endIconMode="clear_text"
            app:endIconTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yeonsung"
                android:inputType="textPostalAddress"
                android:maxLines="2"
                android:text="@string/address"
                android:textColor="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Phone -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/check_phone_profile"
            app:endIconMode="clear_text"
            app:endIconTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yeonsung"
                android:inputType="phone"
                android:maxLines="1"
                android:text="@string/phone"
                android:textColor="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/yeonsung"
            android:hint="@string/choose_location"
            app:hintTextColor="@color/blue"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="@+id/phone_container"
            app:layout_constraintStart_toStartOf="@+id/phone_container"
            app:layout_constraintTop_toBottomOf="@+id/phone_container"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CustomOutlineBox">

            <!-- Важно: отключаем ввод с клавиатуры -->
            <AutoCompleteTextView
                android:id="@+id/dropdownEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yeonsung"
                android:inputType="none"
                android:popupBackground="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Info Text for Email Change -->
        <TextView
            android:id="@+id/tv_email_change_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/yeonsung"
            android:text="@string/email_change_warning"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/email_container"
            app:layout_constraintStart_toStartOf="@+id/email_container"
            app:layout_constraintTop_toBottomOf="@+id/email_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
